edit video source
Sumber video yang awalnya dari file, jadi dari youtube.

--- a/nct127.html
+++ b/nct127.html
@@ -357,7 +357,7 @@
                 <tr>
                     <td align="center">
                         <video width="854" height="480" controls>
-                                        <source src="STICKER MV.mp4" type="video/mp4">
+                                        <source src="https://youtube.com/embed/1oYWnbTSang?autoplay=1" type="video/mp4">
                         </video>
                     </td>
                 </tr>
