--- a/index.html
+++ b/index.html
@@ -355,10 +355,9 @@
                     </td>
                 </tr>
                 <tr>
-                    <td align="center">
-                        <video width="854" height="480" controls>
-                                        <source src="https://youtube.com/embed/1oYWnbTSang?autoplay=1" type="video/mp4">
-                        </video>
+                    <td align="center">                        
+                        <iframe width="854" height="480" src="https://www.youtube.com/embed/1oYWnbTSang" title="NCT 127 - Sticker MV" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
                     </td>
                 </tr>
             </table>
